k8s/ccp/ccp-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: ccp-api-service
  labels:
    app: ccpapi
spec:
  ports:
  - port: 80
    targetPort: 8888
    protocol: TCP
    name: http
  selector:
    app: ccpapi
