k8s/ccp/ccp-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: ccp-web-service
  labels:
    app: ccpweb
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ccpweb
